# python-pwn-productiecapaciteit-infiltratiegebieden

./: .gitattributes  .gitignore  LICENSE  README.md  copilot-session-98ef464e-5037-46a5-bb98-f5e17775e5c8.md  notes  pyproject.toml  ruff.toml  ruff_defaults.toml  wvpt_review_findings.md
.github/workflows/: functional_testing.yml
productiecapaciteit/: __init__.py  version.py
productiecapaciteit/data/: Werkzaamheden.xlsx  data_functions.py  prepare_data.py  strang_props6.csv  strang_props6.xlsx  strang_props7.csv
productiecapaciteit/data/Merged/: IK101-PKA-DSEW036680.feather  IK101.feather  IK102-PKA-DSEW036680.feather  IK102.feather  IK103-PKA-DSEW036680.feather  IK103.feather  IK104-PKA-DSEW036680.feather  IK104.feather  IK105-PKA-DSEW036680.feather  IK105.feather  IK106-PKA-DSEW036680.feather  (+13 more)
productiecapaciteit/reports/: Leidingweerstand.py  check_wvpweerstand.py  investigate_pt10_offset3.py  investigate_pt10_offset4.py  investigate_pt10_offset_lowflow.py  losses_rapport.py  putfilter3.py  putfilterf2.py  report_effect_table.py  report_effect_wvpverstopping.py  report_increasecapacity.py  report_minimale_inzet.py  report_somrapport.py  report_wvpweerstand_transient.py  report_wvpweerstand_transient_initial.py  report_wvpweerstand_transient_manual.py  somrapport.py  wvpweerstand.py
productiecapaciteit/results/: 20250203 - verslag.csv
productiecapaciteit/src/: capaciteit_strang.py  strang_analyse_fun2.py  weerstand_pandasaccessors.py  wvp_transient.py  wvp_transient_funs.py
tests/: test_report_wvpweerstand_transient.py  test_wvp_transient_accessor.py  test_wvp_transient_hantush.py
(+10 files in other folders)
