[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "productiecapaciteit"
dynamic = ["version"]
description = "Productiecapaciteit van infiltratiegebieden ICAS en IKIEF"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "B.F. des Tombe" },
]
maintainers = [
    { name = "B.F. des Tombe", email = "bas.des.tombe@pwn.nl" },
]
requires-python = ">= 3.8"
dependencies = [
    "pandas<2.0",
    "dawacotools @ git+https://github.com/bdestombe/python-dawaco-tools.git"

]
keywords = ["hydrology", "groundwater", "modeling", "Modflow 6", "flopy"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Other Audience',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Scientific/Engineering :: Hydrology',
]

[project.urls]
homepage = "https://github.com/bdestombe/python-pwn-productiecapaciteit-infiltratiegebieden"
repository = "https://github.com/bdestombe/python-pwn-productiecapaciteit-infiltratiegebieden"

[tool.setuptools.dynamic]
version = { attr = "productiecapaciteit.version.__version__" }

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
